--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.7
+          cache: "pipenv"
       - run: pip install pipenv
       - run: pipenv install --skip-lock
       - run: pipenv run pre-commit install
