--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -9,13 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          submodules: recursive
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          python-version: "3.10"
           cache: "pipenv"
       - run: pip install pipenv
-      - run: pipenv install --skip-lock
+      - run: pipenv install
       - run: pipenv run pre-commit install
       - run: pipenv run pre-commit run --all-files
