--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,41 @@
 repos:
-  - repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-    hooks:
-      - id: seed-isort-config
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.8.0
+  - repo: local
     hooks:
       - id: isort
-  - repo: https://github.com/ambv/black
-    rev: 20.8b1
-    hooks:
-      - id: black
-        language_version: python3.7
-        additional_dependencies: ["click==8.0.4"]
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+        name: isort
+        entry: isort
+        language: python
+        "types": [python]
+        args: []
+        require_serial: false
+        additional_dependencies: []
+        minimum_pre_commit_version: "0"
+  - repo: local
     hooks:
       - id: flake8
-  - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: "v1.1.257"
+        name: Flake8
+        description: This hook runs flake8.
+        entry: flake8
+        language: python
+        types: [python]
+        require_serial: true
+  - repo: local
     hooks:
       - id: pyright
+        name: pyright
+        description: ""
+        entry: pyright
+        language: node
+        "types": [python]
+        args: []
+        require_serial: false
+        minimum_pre_commit_version: "0"
+  - repo: local
+    hooks:
+      - id: black
+        name: black
+        description: "Black: The uncompromising Python code formatter"
+        entry: black
+        language: python
+        require_serial: true
+        types_or: [python, pyi]
