--- a/Pipfile
+++ b/Pipfile
@@ -4,20 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-black = "==20.8b1"
-isort = "*"
-flake8 = "*"
+black = "==23.1.0"
+isort = "==5.12.0"
+flake8 = "==6.0.0"
 pre-commit = "*"
 numpy = "*"
-gym = "*"
 tqdm = "*"
 matplotlib = "*"
-stable-baselines3 = "*"
+pyright = "==1.1.296"
+stable-baselines3 = ">=1.7.0"
 tensorboard = "*"
-click = "==8.0.4"
-pyright = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.10"
