--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           python-version: "3.10"
           cache: "pipenv"
-      - run: pip install pipenv
-      - run: pip install setuptools==65.5.0 # Workaround to Gym package problem with setuptools specified in https://github.com/openai/gym/issues/3176
+      - run: pipenv --python 3.10
+      - run: pipenv install setuptools==65.5.0 # Workaround to Gym package problem with setuptools specified in https://github.com/openai/gym/issues/3176
       - run: pipenv install
       - run: pipenv run pre-commit install
       - run: pipenv run pre-commit run --all-files
