--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -9,13 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
           cache: "pipenv"
       - run: pip install pipenv
       - run: pipenv --python 3.10
-      - run: pipenv install setuptools==65.5.0 # Workaround to Gym package problem with setuptools specified in https://github.com/openai/gym/issues/3176
+      - run: pipenv run pip install setuptools==65.5.0 # Workaround to Gym package problem with setuptools specified in https://github.com/openai/gym/issues/3176
       - run: pipenv install
       - run: pipenv run pre-commit install
       - run: pipenv run pre-commit run --all-files
