Initial deployment of a MARL using Ray (imcomplete)

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,15 @@ pyright = "==1.1.296"
 stable-baselines3 = ">=1.7.0"
 tensorboard = "*"
 pettingzoo = "*"
+dm-tree = "*"
+opencv-python = "*"
+scipy = "*"
+tensorflow-probability = "*"
+pyarrow = "*"
+lz4 = "*"
+tensorboardx = "*"
+fsspec = "*"
+ray = {extras = ["tune"], version = "*"}
 
 [dev-packages]
 
